# chronolog

./: CMakeLists.txt  README.md  chronolog.conf
inc/: chronolog.hpp  config.hpp  logger.hpp  timer.hpp
src/: chronolog.cpp  config.cpp  logger.cpp  timer.cpp
